--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
             <version>3.4</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.7</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version><!-- 1.2.51增加了jsonPath的自动把结果封为数组的功能，对验证报文很有用，https://github.com/alibaba/fastjson/commit/7c2ad36f9b1ba0d3ff9984ff8155ab4d208eed92 -->
         </dependency>
         <!-- alibaba的druid数据库连接池 -->
         <dependency>
