支持oracle数据源

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,11 @@
+dbType=oracle
+#mysql
 jdbc_driver=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=GMT%2B8
 jdbc_username=root
 jdbc_password=root
+#oracle
+oracle_jdbc_driver=oracle.jdbc.OracleDriver
+oracle_jdbc_url=jdbc:oracle:thin:@192.168.145.128:1522/xe
+oracle_jdbc_username=ocdm
+oracle_jdbc_password=ocdm
